Added aws deployments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,15 @@ services:
   mysql:
     image: mysql:8.0
     container_name: mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: gadetdb
-      MYSQL_USER: oladayo
-      MYSQL_PASSWORD: mypassword
+    env_file:
+      - .env
     ports:
       - "3306:3306"
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      interval: 5s
+      timeout: 10s
+      retries: 5
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
@@ -19,15 +21,13 @@ services:
   app:
     build: .
     container_name: springboot-app
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/gadetdb
-      SPRING_DATASOURCE_USERNAME: oladayo
-      SPRING_DATASOURCE_PASSWORD: mypassword
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+    env_file:
+      - .env
     ports:
       - "8080:8080"
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     networks:
       - mynetwork
 
