--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,16 @@
 spring:
   datasource:
-    url: jdbc:sqlserver://mssql:1433;databaseName=gadgetdb;encrypt=false
-    username: sa
-    password: Myp@ssw0rd#2025
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.SQLServerDialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
   cache:
     type: redis
   data:
@@ -21,5 +22,7 @@ spring:
     jwt:
       secret: "change-me-to-a-very-long-random-string-at-least-32-chars"
       expiration-ms: 3600000
-server:
-  port: 8080
+  sql:
+    init:
+      mode: always
+      continue-on-error: true
